Fix wrong options reading and file generation

--- a/templates/next-gen.json.template
+++ b/templates/next-gen.json.template
@@ -1,7 +1,7 @@
 {
-  "models": "",
-  "routers": "",
-  "zodSchemas": "",
-  "schema": "",
-  "pages": "",
+  "models": "./",
+  "routers": "./",
+  "zodSchemas": "./",
+  "schema": "./",
+  "pages": "./"
 }
